<resources>
    <string name="app_name" translatable="false">SplashGallery</string>

    <!--Descriptions-->
    <string name="description_image">image</string>

    <!--Labels-->
    <string name="label_tab_layout_all">All</string>
    <string name="label_collections">Collections</string>
    <string name="label_camera">Camera</string>
    <string name="label_focal_length">Focal Length</string>
    <string name="label_aperture">Aperture</string>
    <string name="label_dimension">ISO</string>
    <string name="label_photos">Photos</string>
    <string name="label_likes">Likes</string>
    <string name="label_download">Download</string>
    <string name="string_unknown">Unknown</string>

    <!--Transition name-->
    <string name="transition_name_username" translatable="false">username</string>
    <string name="transition_name_single_image" translatable="false">single_image</string>

</resources>