<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_photo.PhotoDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/single_photo_app_bar"
            style="@style/AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/single_photo_toolbar"
                style="@style/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imageImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_image"
            android:cropToPadding="true"
            tools:src="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/userCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:cardElevation="0dp">

                <LinearLayout
                    android:id="@+id/single_photo_profile_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/primary_padding"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/avatarImageView"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="@dimen/primary_padding"
                        android:contentDescription="@string/description_image"
                        tools:src="@color/black" />

                    <TextView
                        android:id="@+id/usernameTextView"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"
                        tools:text="Username" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/single_photo_download"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="@dimen/primary_padding"
                android:layout_weight="2"
                android:text="@string/label_download"
                app:icon="@drawable/ic_baseline_save" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/primary_padding" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/primary_padding"
            android:layout_marginEnd="@dimen/primary_padding"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/single_photo_label_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_camera" />

                <TextView
                    android:id="@+id/cameraTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    tools:text="camera" />

                <TextView
                    android:id="@+id/single_photo_label_aperture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/primary_padding"
                    android:text="@string/label_aperture" />

                <TextView
                    android:id="@+id/apertureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    tools:text="aperture" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelFocalTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_focal_length" />

                <TextView
                    android:id="@+id/focalTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    tools:text="focal" />

                <TextView
                    android:id="@+id/single_photo_label_dimension"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/primary_padding"
                    android:text="@string/label_dimension" />

                <TextView
                    android:id="@+id/dimensionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    tools:text="dimension" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/primary_padding" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>